// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser call 1`] = `
Object {
  "name": "foo",
  "type": "call",
}
`;

exports[`parser function 1`] = `
Object {
  "body": Array [
    Object {
      "left": Object {
        "type": "identifier",
        "value": "a",
      },
      "op": "+",
      "right": Object {
        "type": "identifier",
        "value": "b",
      },
      "type": "operator",
    },
  ],
  "name": "foo",
  "type": "function",
}
`;

exports[`parser function 2`] = `
Object {
  "body": Array [],
  "name": "foo",
  "type": "function",
}
`;

exports[`parser loop 1`] = `
Object {
  "body": Array [
    Object {
      "left": Object {
        "type": "identifier",
        "value": "a",
      },
      "op": "+",
      "right": Object {
        "type": "identifier",
        "value": "b",
      },
      "type": "operator",
    },
  ],
  "stack": "a",
  "type": "loop",
}
`;

exports[`parser loop 2`] = `
Object {
  "body": Array [],
  "stack": "a",
  "type": "loop",
}
`;

exports[`parser operators 1`] = `
Object {
  "left": Object {
    "type": "identifier",
    "value": "a",
  },
  "op": "+",
  "right": null,
  "type": "operator",
}
`;

exports[`parser operators 2`] = `
Object {
  "left": Object {
    "type": "identifier",
    "value": "a",
  },
  "op": "+",
  "right": Object {
    "type": "identifier",
    "value": "b",
  },
  "type": "operator",
}
`;

exports[`parser operators 3`] = `
Object {
  "left": Object {
    "type": "identifier",
    "value": "a",
  },
  "op": "+",
  "right": Object {
    "type": "literal",
    "value": 2,
  },
  "type": "operator",
}
`;
